--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <body>
     <a href="itms-services://?action=download-manifest&url=https://tagken0000.github.io/ios-ota/manifest.plist">
-      アプリをインストール
+      アプリをインストール!
     </a>
   </body>
 </html>
+
