--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <body>
     <a href="itms-services://?action=download-manifest&url=https://tagken0000.github.io/ios-ota/manifest.plist">
-      アプリをインストール!
+      アプリをインストール
     </a>
   </body>
 </html>
+
 
