--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <body>
     <a href="itms-services://?action=download-manifest&url=https://tagken0000.github.io/ios-ota/manifest.plist">
-      アプリをインストール
+      アプリをインストール1
     </a>
   </body>
 </html>
+
 
 
